# nice

./: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  datatype.rs  lib.rs
crates/ast/src/ast/: expression.rs  identifier.rs  list_element.rs  main.rs  node.rs  utils.rs  variable_definition.rs
crates/genv/: Cargo.toml
crates/genv/src/: main.rs
crates/genv/src/diagnostics/: diagnostic.rs
crates/genv/src/helpers/: hir_map.rs  state.rs
crates/genv/src/resolver/: mod.rs  resolve_ctx.rs
crates/macro/: Cargo.toml
crates/parse/: Cargo.toml
crates/parse/src/: combinator.rs  error.rs  input.rs  lib.rs  parser.rs  parsing.rs  util.rs
crates/parse/src/engine/: eval_ast.rs  mod.rs  run.rs  tt.rs
crates/parse/src/engine/script/: 1.ps
crates/parse/src/parser/: diagnostic.rs  diagnostics_list.rs  parsing_context.rs  source_file.rs
crates/parse/src/parsing/: main.rs  parse_assign.rs  parse_block.rs  parse_data_type.rs  parse_declaration_mode.rs  parse_function.rs  parse_identifier.rs  parse_if.rs  parse_import.rs  parse_map.rs  parse_node.rs  parse_parameter.rs  parse_record.rs  parse_statement.rs  parse_util.rs  parse_variable.rs
crates/parse/src/ty/: func_type.rs  primitive_type.rs  struct_type.rs  type.rs
crates/position/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: environment.rs  lib.rs
crates/runtime/src/api/: events.rs  reflection.rs  util.rs
crates/runtime/src/value/: builders.rs  mod.rs
crates/tests/: Cargo.toml  parser.rs  runtime.rs
crates/tests/script/: 2.ps  for.ps  while.ps
docs/genv/src/: tests.rs
(+14 files in other folders)
