[package]
name = "parse"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
ast = { path = "../ast" }
nom = "7.1.3"
nom_locate = "4.2.0"
ariadne = "0.1.5"
position = { path = "../position" }
log = "0.4.22"
regex = "1.10.6"
colored = "2.1.0"
serde = { version = "1.0.208", features = ["derive"] }


[dev-dependencies]
indoc = "2"
insta = "1"
pretty_assertions = "1"
