[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ast = { path = "../ast" }
parse = { path = "../parse" }
runtime = { path = "../runtime" }


[[test]]
name = "test_parser"
path = "parser.rs"

[[test]]
name = "test_runtime"
path = "runtime.rs"

